--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -46,12 +46,19 @@ span {
   background-color: #292F3F;
   border: 1px solid #DD9943;
   margin: 20px 0px;
+  margin-right: 20px;
+  margin-left: 10px;
   padding: 2px 15px;
   border-radius: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 20px;
+  cursor: pointer;
+  transition: all 0.2s linear;
+}
+.containerMenu ul li:hover {
+  transform: scale(1.02);
 }
 .containerMenu ul li p {
   font-family: "italianno";
@@ -73,7 +80,7 @@ span {
   border-radius: 10px;
   padding: 5px 15px;
 }
-.containerPedido > div {
+.containerPedido__productos {
   overflow-y: auto;
 }
 .containerPedido__productos__title {
@@ -122,7 +129,7 @@ span {
 .containerPedido__propina {
   border-top: 1.5px dotted #DD9943;
   border-bottom: 1.5px dotted #DD9943;
-  margin-top: 10px 0px;
+  margin-top: 10px;
   padding: 0px 10px;
 }
 .containerPedido__propina h3 {
